--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shakil portfolio</title>
     <!-------favcion io link------>
-    <link rel="shortcut icon" href="img/icons8-dev-post-16.png" type="image/x-icon">
+    <link rel="shortcut icon" href="icons8-dev-post-16.png" type="image/x-icon">
 </head>
 <body>
     
