top-banner section

--- a/index.html
+++ b/index.html
@@ -7,8 +7,25 @@
     <title>Shakil portfolio</title>
     <!-------favcion io link------>
     <link rel="shortcut icon" href="icons8-dev-post-16.png" type="image/x-icon">
+    <!------- google fonts link ---------->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;1,300&display=swap" rel="stylesheet">
+    <!--------- link style css -------->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <section class="top-banner flex-content">
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1><span>Shakil Miah!</span> World</h1>
+            <h3>Build Climber and Train Stopper</h3>
+            <p>Over the past years, I created 100s of websites for my clients. I pride myself on doing quality work and maintain excellent communication.My design is simple & fresh. My coding is W3C validated, fresh, SEO optimized and also hand coded.</p>
+            <a target="_blank" class="link-button" href="">HIRE ME</a>
+        </div>
+        <div class="half-width">
+            <img src="images/shakil.png" alt="">
+        </div>
+    </section>
 </body>
 </html>
