--- a/index.html
+++ b/index.html
@@ -27,5 +27,18 @@
             <img src="images/shakil.png" alt="">
         </div>
     </section>
+    <section class="dream-big flex-content">
+        <div class="half-width">
+            <img src="images/shakil.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h3>Become a web developer</h3>
+            <p>Over the past years, I created 100s of websites for my clients. I pride myself on doing quality work and maintain
+                excellent communication.My design is simple & fresh. My coding is W3C validated, fresh, SEO optimized and also
+                hand coded.</p>
+            <a target="_blank" class="link-button" href="linkedin.com/in/md-shakil-404059196">HIRE ME</a>
+        </div>
+    </section>
 </body>
 </html>
