experiences-section added

--- a/index.html
+++ b/index.html
@@ -37,7 +37,22 @@
             <p>Over the past years, I created 100s of websites for my clients. I pride myself on doing quality work and maintain
                 excellent communication.My design is simple & fresh. My coding is W3C validated, fresh, SEO optimized and also
                 hand coded.</p>
-            <a target="_blank" class="link-button" href="linkedin.com/in/md-shakil-404059196">HIRE ME</a>
+            <a target="_blank" class="link-button" href="linkedin.com/in/md-shakil-404059196">DOWNLOAD RESUME</a>
+        </div>
+    </section>
+    <section class="experiences_area">
+        <h1>Experiences</h1>
+        <div class="experience_itms">
+            <div class="exp_widget" id="junior_developer">
+                <h2>Junior Developr</h2>
+                <strong>2020-2021 | Programming Hero Learner</strong>
+                <p>I am beginer as a web Developer.I learn to web development by Programming-hero.com.At this moment i create a simple website.I used to github and push there my code.I create a website and share with free hosting github hosting</p>
+            </div>
+            <div class="exp_widget" id="fullStack_developer">
+                <h2>Full Stack Web Developer</h2>
+                <strong>2020-2021 | Programming Hero Learner</strong>
+                <p>I am beginer as a web Developer.I learn to web development by Programming-hero.com.At this moment i create a simple website.I used to github and push there my code.I create a website and share with free hosting github hosting</p>
+            </div>
         </div>
     </section>
 </body>
