--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </section>
     <section class="dream-big flex-content">
         <div class="half-width">
-            <img src="images/shakil.png" alt="">
+            <img src="images/shakil1.png" alt="">
         </div>
         <div class="half-width">
             <h1>Dream Big</h1>
